# MoteurJeu_SimpleGE

./: README.md
SimpleGE-master/: CMakeLists.txt  README.md  pretty.ps1  pretty.sh
SimpleGE-master/examples/chickendodge/: CMakeLists.txt
SimpleGE-master/examples/chickendodge/data/: equipe.txt
SimpleGE-master/examples/chickendodge/data/scenes/: play.json
SimpleGE-master/examples/chickendodge/data/shaders/: deformation.frag
SimpleGE-master/examples/chickendodge/include/chickendodge/components/: chicken.h  chickenspawner.h  countdown.h  heart.h  life.h  player.h  referee.h  rupee.h  score.h  timer.h
SimpleGE-master/examples/chickendodge/src/: game.cpp
SimpleGE-master/examples/chickendodge/src/components/: backgroundloader.cpp  chicken.cpp  chickenspawner.cpp  countdown.cpp  heart.cpp  life.cpp  player.cpp  referee.cpp  rupee.cpp  score.cpp  timer.cpp
SimpleGE-master/include/simplege/: components.h  entity.h  game.h  image.h  math.h  resources.h  scene.h  simplege.h  textasset.h
SimpleGE-master/include/simplege/components/: camera.h  collider.h  component.h  compositor.h  debugdrawcalls.h  deformationcompositor.h  enabler.h  input.h  rawsprite.h  rendercompositor.h  sprite.h  spritesheet.h  textsprite.h  texture.h
SimpleGE-master/include/simplege/graphics/: buffer.h  program.h  rendertexture.h  shader.h  texture.h  vertexarrays.h
SimpleGE-master/include/simplege/pch/: precomp.h
SimpleGE-master/include/simplege/systems/: entitysystem.h  logicsystem.h  physicsystem.h
SimpleGE-master/src/: entity.cpp  game.cpp  image.cpp  resources.cpp  scene.cpp
SimpleGE-master/src/components/: QuadTree.h  camera.cpp  collider.cpp  compositor.cpp  compositor.h  debugdrawcalls.cpp  deformationcompositor.cpp  enabler.cpp  input.cpp  layer.cpp  rawsprite.cpp  rendercompositor.cpp  sprite.cpp  spritesheet.cpp  textsprite.cpp  texture.cpp
SimpleGE-master/src/graphics/: buffer.cpp  buffer.h  graphicapi.h  program.cpp  program.h  rendertexture.cpp  rendertexture.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexarrays.cpp  vertexarrays.h
